--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul class = "navbar">
-                <li><a href="jiniaIndex.html">HOME</a></li>
+                <li><a href="https://jinia2105.github.io">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#skills">SKILLS</a></li>
                 <li><a href="#education">EDUCATION</a></li>
